Usa isBlank para verificar descrição da Movimentacao
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>